--- a/webtestpilot/src/views/test-editor.html
+++ b/webtestpilot/src/views/test-editor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Test: {{TEST_NAME}}</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
             font-family: var(--vscode-font-family);
